// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelperText render it should render 1`] = `
.emotion-2 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-2 *,
.emotion-2 *::after,
.emotion-2 *::before {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.25rem;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #666a6d;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
    display="flex"
  >
    <div
      className="emotion-0"
      fontSize="fontSize30"
    >
      child
    </div>
  </div>
</div>
`;

exports[`FormHelperText render it should render with an error icon 1`] = `
.emotion-4 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-4 *,
.emotion-4 *::after,
.emotion-4 *::before {
  box-sizing: border-box;
}

.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.25rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #e22525;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #e22525;
  margin-left: 0.125rem;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
    display="flex"
  >
    <span
      className="emotion-0 emotion-1"
      size="sizeIcon30"
    >
      <svg
        aria-hidden={true}
        aria-labelledby="1"
        height="100%"
        role="img"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M12 2a9.968 9.968 0 017.06 2.918l.011.01.011.012a9.967 9.967 0 012.913 6.765L22 12c0 5.523-4.477 10-10 10a9.969 9.969 0 01-7.066-2.924l-.005-.005A9.973 9.973 0 012 12C2 6.477 6.477 2 12 2zm6.709 4L5.999 18.707a8.966 8.966 0 006 2.293c4.883 0 8.856-3.886 8.997-8.72l.004-.266-.004-.28A8.96 8.96 0 0018.709 6zm-6.71-3A9 9 0 003 12c0 2.305.867 4.408 2.292 6L18 5.293A8.97 8.97 0 0012 3z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </span>
    <div
      className="emotion-2"
      fontSize="fontSize30"
    >
      child
    </div>
  </div>
</div>
`;
